--- a/package.json
+++ b/package.json
@@ -41,11 +41,10 @@
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.5.0",
-    "starknet": "^6.11.0",
+    "starknet": "^7.6.2",
     "starknetkit": "^1.1.9",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.25.28"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
