--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.56.4",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.6",
     "starknet": "^7.6.2",
     "starknetkit": "^1.1.9",
     "tailwind-merge": "^2.2.1",
