--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.331.0",
     "next": "14.1.3",
+    "pinata": "^2.4.9",
     "react": "^18",
     "react-blockies": "^1.4.1",
     "react-day-picker": "^8.10.1",
